--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "RacingNewsScrape",
   "version": "1.0.0",
-  "description": "",
+  "description": "Repository scrapes ESPNNews to display NASCAR headlines",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,7 +22,7 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
-    "mongoose": "^5.3.15",
+    "mongoose": "^5.7.7",
     "morgan": "^1.9.1"
   }
 }
